data/cube/overlays/production/cube-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cubejs-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cubejs-app
  template:
    metadata:
      labels:
        app: cubejs-app
    spec:
      containers:
        - name: cubejs-app
          image: cubejs/cube:latest
          ports:
            - containerPort: 4000
          volumeMounts:
            - name: config
              mountPath: /cube/conf
      volumes:
        - name: config
          hostPath:
            path: /data/cubestore/conf
            type: DirectoryOrCreate
