data/cube/overlays/production/cube-router-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cubestore-router
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cubestore-router
  template:
    metadata:
      labels:
        app: cubestore-router
    spec:
      nodeSelector:
        kubernetes.io/hostname: growing-mouse
      containers:
        - name: cubestore-router
          image: cubejs/cubestore:latest
          volumeMounts:
            - name: data
              mountPath: /cube/data
      volumes:
        - name: data
          hostPath:
            path: /data/cubestore/data
            type: DirectoryOrCreate
