data/cube/overlays/production/cube-worker1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cubestore-worker-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cubestore-worker-1
  template:
    metadata:
      labels:
        app: cubestore-worker-1
    spec:
      nodeSelector:
        kubernetes.io/hostname: growing-mouse
      containers:
        - name: cubestore-worker-1
          image: cubejs/cubestore:v1.3.41
          volumeMounts:
            - name: data
              mountPath: /cube/data
      volumes:
        - name: data
          hostPath:
            path: /data/cubestore/data
            type: DirectoryOrCreate
