data/cube/overlays/production/cube-worker2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cubestore-worker-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cubestore-worker-2
  template:
    metadata:
      labels:
        app: cubestore-worker-2
    spec:
      nodeSelector:
        kubernetes.io/hostname: growing-mouse
      containers:
        - name: cubestore-worker-2
          image: cubejs/cubestore:v1.3.42
          ports:
            - containerPort: 10002
          volumeMounts:
            - name: data
              mountPath: /cube/data
      volumes:
        - name: data
          hostPath:
            path: /data/cubestore/data
            type: DirectoryOrCreate
