data/cube/overlays/production/cube-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cubejs-app
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: ''
spec:
  selector:
    app: cubejs-app
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
      name: http
    - protocol: TCP
      targetPort: 15432
      port: 15432
      name: postgres
  type: ClusterIP
