data/cube/overlays/production/cube-router-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cubestore-router
  annotations:
    tailscale.com/expose: "true"
spec:
  selector:
    app: cubestore-router
  ports:
    - protocol: TCP
      port: 9999
      targetPort: 9999
  type: ClusterIP
