data/cube/overlays/production/cube-worker1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cubestore-worker-1
spec:
  selector:
    app: cubestore-worker-1
  ports:
    - protocol: TCP
      port: 10001
      targetPort: 10001
  type: ClusterIP
