data/cube/overlays/production/cube-worker2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cubestore-worker-2
spec:
  selector:
    app: cubestore-worker-2
  ports:
    - protocol: TCP
      port: 10002
      targetPort: 10002
  type: ClusterIP
