data/cube/overlays/production/cube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cubejs-app
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 194.144.179.29
spec:
  rules:
    - host: db.contextsuite.com
      http:
        paths:
          - backend:
              service:
                name: cubejs-app
                port:
                  number: 4000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - db.contextsuite.com
      secretName: star-contextsuite-com
